--- a/actorviewer.html
+++ b/actorviewer.html
@@ -11,7 +11,7 @@
         <div>
             <table class="table" id="actorTable">
                 <tr>
-                        <th>id</th>
+                        <th>ID</th>
                         <th>Name</th>
                         <th>
                             Gender
@@ -24,7 +24,10 @@
             </table>
         </div>
         <div id='createUpdateForm' style="display: none">
-                <h2><span id="createLabel">Create a</span> <span id="updateLabel">update</span> Actor</h2>
+                <h2>
+                    <span id="createLabel" style="display:inline;">Create an</span>
+                    <span id="updateLabel" style="display:none;">Update</span> Actor
+                </h2>
                 <input type="hidden" name="id"/>
                 Name <input type="text" name="name"/><br/>
                 Gender <input type="text" name="gender"/> <br/>
@@ -92,6 +95,10 @@
         showViewAll();
     }
     function doDelete(r){
+        if (!confirm("Are you sure you want to delete this actor?")) {
+            return; // If the user cancels, do nothing
+        }
+
         var tableElement = document.getElementById('actorTable');
         var rowElement = r.parentNode.parentNode;
         var index = rowElement.rowIndex;
@@ -125,11 +132,11 @@
         form.querySelector('input[name="dob"]').value=''
     }
     function getActorFromRow(rowElement){
-        var car ={}
+        var actor ={}
         actor.id  = rowElement.getAttribute('id')
         actor.name = rowElement.cells[1].firstChild.textContent
         actor.gender = rowElement.cells[2].firstChild.textContent
-        actor.dob = parseInt(rowElement.cells[3].firstChild.textContent,10)
+        actor.dob = rowElement.cells[3].firstChild.textContent
         return actor
     }
     function setActorInRow(rowElement, actor){
@@ -154,7 +161,7 @@
         actor.id = form.querySelector('input[name="id"]').value
         actor.name = form.querySelector('input[name="name"]').value
         actor.gender = form.querySelector('input[name="gender"]').value
-        actor.dob = parseInt(form.querySelector('input[name="dob"]').value,10)
+        actor.dob = form.querySelector('input[name="dob"]').value
         console.log(JSON.stringify(actor))
         return actor
     }
