--- a/actorviewer.html
+++ b/actorviewer.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Actors</h1>
-        <div> <button id="showAddButton" class="btn btn-primary mb-3" onclick="showAdd()">Add</button></div>
+        <div> <button id="showAddButton" class="btn btn-success mb-3" onclick="showAdd()">Add</button></div>
         <div>
             <table class="table" id="actorTable">
                 <tr>
@@ -132,7 +132,7 @@
         var cell4 = rowElement.insertCell(3);
         cell4.innerHTML = actor.dob
         var cell5 = rowElement.insertCell(4);
-        cell5.innerHTML = '<button class="btn btn-warning btn-sm" onclick="showUpdate(this)">Update</button>'
+        cell5.innerHTML = '<button class="btn btn-info btn-sm" onclick="showUpdate(this)">Update</button>'
         var cell6 = rowElement.insertCell(5);
         cell6.innerHTML = '<button class="btn btn-danger btn-sm" onclick="doDelete(this)">Delete</button>'
 
@@ -140,7 +140,7 @@
 
     function clearForm(){
         var form = document.getElementById('addUpdateForm')
-
+        form.querySelector('input[name="id"]').value=''
         form.querySelector('input[name="name"]').value=''
         form.querySelector('input[name="gender"]').value=''
         form.querySelector('input[name="dob"]').value=''
@@ -148,9 +148,9 @@
     function getActorFromRow(rowElement){
         var actor ={}
         actor.id  = rowElement.getAttribute('id')
-        actor.name = rowElement.cells[1].firstChild.textContent
-        actor.gender = rowElement.cells[2].firstChild.textContent
-        actor.dob = rowElement.cells[3].firstChild.textContent
+        actor.name = rowElement.cells[1].firstChild.textContent.trim()
+        actor.gender = rowElement.cells[2].firstChild.textContent.trim()
+        actor.dob = rowElement.cells[3].firstChild.textContent.trim()
         return actor
     }
     function setActorInRow(rowElement, actor){
@@ -161,7 +161,7 @@
     }
     function populateFormWithActor(actor){
         var form = document.getElementById('addUpdateForm')
-        form.querySelector('input[name="id"]').disabled = true
+        form.querySelector('input[name="id"]')
 
         form.querySelector('input[name="id"]').value  = actor.id
         form.querySelector('input[name="name"]').value= actor.name
@@ -257,7 +257,13 @@
     }
     getAllAjax();
   
-
-    
     </script>
+
+    <!-- Bootstrap JS dependencies -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa2FYdR2lE4lW7EFD0x4I9T8+"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </html>
