--- a/actorviewer.html
+++ b/actorviewer.html
@@ -44,10 +44,11 @@
                 <label for="dob">DOB</label>
                 <input type="date" name="dob" class="form-control" id="dob" />
             </div>
-        
-            <button id="doAddButton" class="btn btn-success mr-2" onclick="doAdd()">Add</button>
-            <button id="doUpdateButton" class="btn btn-info" onclick="doUpdate()">Update</button>
-            <button class="btn btn-secondary ml-2" onclick="cancelForm()">Cancel</button>
+            <div class="d-flex mt-3">
+                <button id="doAddButton" class="btn btn-success mr-2" onclick="doAdd()">Add</button>
+                <button id="doUpdateButton" class="btn btn-info" onclick="doUpdate()">Update</button>
+                <button class="btn btn-secondary ml-2" onclick="cancelForm()">Cancel</button>
+            </div>
         </div>
 
     </body>
