Replace DOB labels to Date of Birth (DD-MM-YYYY)

--- a/actorviewer.html
+++ b/actorviewer.html
@@ -16,7 +16,7 @@
                         <th>
                             Gender
                         </th>
-                        <th>DOB</th>
+                        <th>Date of Birth<br><span>(DD-MM-YYYY)</span></th>
                         <th>Update</th>
                         <th>Delete</th>
                 </tr>
@@ -41,7 +41,7 @@
             </div>
         
             <div class="form-group">
-                <label for="dob">DOB</label>
+                <label for="dob">Date of Birth (DD-MM-YYYY)</label>
                 <input type="date" name="dob" class="form-control" id="dob" />
             </div>
             <div class="d-flex mt-3">
