--- a/actorviewer.html
+++ b/actorviewer.html
@@ -37,11 +37,15 @@
         
             <div class="form-group">
                 <label for="gender">Gender</label>
-                <input type="text" name="gender" class="form-control" id="gender" />
+                <select name="gender" class="form-control" id="gender">
+                    <option value="">-- Select Gender --</option>
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                </select>
             </div>
         
             <div class="form-group">
-                <label for="dob">Date of Birth<br><span style="font-size: 0.75em; color: gray;">(DD-MM-YYYY)</span></label>
+                <label for="dob">Date of Birth<br><span style="font-size: 0.75em; color: gray;">(DD/MM/YYYY)</span></label>
                 <input type="date" name="dob" class="form-control" id="dob" />
             </div>
             <div class="d-flex mt-3">
@@ -151,7 +155,7 @@
         var form = document.getElementById('addUpdateForm')
         form.querySelector('input[name="id"]').value=''
         form.querySelector('input[name="name"]').value=''
-        form.querySelector('input[name="gender"]').value=''
+        form.querySelector('select[name="gender"]').value=''
         form.querySelector('input[name="dob"]').value=''
     }
     function getActorFromRow(rowElement){
@@ -174,7 +178,7 @@
 
         form.querySelector('input[name="id"]').value  = actor.id
         form.querySelector('input[name="name"]').value= actor.name
-        form.querySelector('input[name="gender"]').value= actor.gender
+        form.querySelector('select[name="gender"]').value= actor.gender
         form.querySelector('input[name="dob"]').value= actor.dob
         return actor
     }
@@ -183,7 +187,7 @@
         var actor = {}
         actor.id = form.querySelector('input[name="id"]').value
         actor.name = form.querySelector('input[name="name"]').value
-        actor.gender = form.querySelector('input[name="gender"]').value
+        actor.gender = form.querySelector('select[name="gender"]').value
         actor.dob = form.querySelector('input[name="dob"]').value
         console.log(JSON.stringify(actor))
         return actor
