corrected bug from gender in doAdd funciton

--- a/actorviewer.html
+++ b/actorviewer.html
@@ -112,7 +112,7 @@
         var actor = {}
        
         actor.name = form.querySelector('input[name="name"]').value
-        actor.gender = form.querySelector('input[name="gender"]').value
+        actor.gender = form.querySelector('select[name="gender"]').value
         actor.dob = form.querySelector('input[name="dob"]').value
         actor.country = form.querySelector('select[name="country"]').value
         console.log(JSON.stringify(actor))
