change console.error to console.log in error

--- a/actorviewer.html
+++ b/actorviewer.html
@@ -268,7 +268,7 @@
                 console.log("Actor updated:", response);
             },
             "error":function(xhr,status,error){
-                console.error("Update error: " + status + " msg: " + error);
+                console.log("Update error: " + status + " msg: " + error);
             }
         });
     }
