change console.error to console.log in error

--- a/actorviewer.html
+++ b/actorviewer.html
@@ -313,7 +313,7 @@
                 showViewAll();
             },
             error: function (xhr, status, error) {
-                console.error("Add error:", + status + " msg: " + error);
+                console.log("Add error:", + status + " msg: " + error);
             }
         });
     }
