--- a/actorviewer.html
+++ b/actorviewer.html
@@ -1,238 +1,168 @@
-<html>
+<script>
+    // Date formatting
+    const formatDate = (dateStr) => {
+        if (!dateStr) return '';
+        const date = new Date(dateStr);
+        return date.toLocaleDateString('en-GB'); // DD/MM/YYYY format
+    };
 
-<head>
-    <title>View Actors</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <!-- jQuery (full version to support $.ajax) -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-</head>
+    // View management
+    const toggleViews = (showForm, isUpdate = false) => {
+        $('#showAddButton').toggle(!showForm);
+        $('#actorTable').toggle(!showForm);
+        $('#addUpdateForm').toggle(showForm);
 
-<body>
-    <div class="container mt-4">
-        <h1>Actors</h1>
-        <button id="showAddButton" class="btn btn-success mb-3" onclick="showAdd()">Add Actor</button>
+        $('#addLabel').toggle(!isUpdate);
+        $('#updateLabel').toggle(isUpdate);
+        $('#doAddButton').toggle(!isUpdate);
+        $('#doUpdateButton').toggle(isUpdate);
+    };
 
-        <table class="table table-striped" id="actorTable">
-            <thead class="thead-dark">
-                <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Gender</th>
-                    <th>Date of Birth</th>
-                    <th>Country</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+    const showAdd = () => {
+        clearForm();
+        toggleViews(true);
+    };
 
-        <div id='addUpdateForm' class="card p-3 mb-4" style="display: none">
-            <h2 class="card-title">
-                <span id="addLabel">Add an Actor</span>
-                <span id="updateLabel" style="display:none;">Update Actor</span>
-            </h2>
-            <input type="hidden" name="id">
+    const showViewAll = () => toggleViews(false);
 
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" name="name" class="form-control" required>
-            </div>
-
-            <div class="form-group">
-                <label for="gender">Gender</label>
-                <select name="gender" class="form-control" required>
-                    <option value="">-- Select Gender --</option>
-                    <option value="Male">Male</option>
-                    <option value="Female">Female</option>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <label for="dob">Date of Birth</label>
-                <input type="date" name="dob" class="form-control" required>
-            </div>
-
-            <div class="form-group">
-                <label for="country">Country</label>
-                <select name="country" class="form-control" required>
-                    <option value="">-- Select Country --</option>
-                </select>
-            </div>
-
-            <div class="d-flex justify-content-end">
-                <button id="doAddButton" class="btn btn-success mr-2" onclick="doAdd()">Add</button>
-                <button id="doUpdateButton" class="btn btn-primary mr-2" onclick="doUpdate()"
-                    style="display:none">Update</button>
-                <button class="btn btn-secondary" onclick="cancelForm()">Cancel</button>
-            </div>
-        </div>
-    </div>
-
-    <script>
-        // Simplified functions
-        const formatDate = (dateStr) => {
-            if (!dateStr) return '';
-            const date = new Date(dateStr);
-            return date.toLocaleDateString('en-GB'); // DD/MM/YYYY format
+    const showUpdate = (button) => {
+        const row = $(button).closest('tr');
+        const actor = {
+            id: row.data('id'),
+            name: row.find('.actor-name').text(),
+            gender: row.find('.actor-gender').text(),
+            dob: row.find('.actor-dob').data('date'),
+            country: row.find('.actor-country').text()
         };
 
-        const toggleViews = (showForm, isUpdate = false) => {
-            $('#showAddButton').toggle(!showForm);
-            $('#actorTable').toggle(!showForm);
-            $('#addUpdateForm').toggle(showForm);
+        populateForm(actor);
+        toggleViews(true, true);
+    };
 
-            $('#addLabel').toggle(!isUpdate);
-            $('#updateLabel').toggle(isUpdate);
-            $('#doAddButton').toggle(!isUpdate);
-            $('#doUpdateButton').toggle(isUpdate);
-        };
+    const cancelForm = () => {
+        clearForm();
+        showViewAll();
+    };
 
-        const showAdd = () => {
-            clearForm();
-            toggleViews(true);
-        };
+    // Form handling
+    const clearForm = () => {
+        $('#addUpdateForm')[0].reset();
+        $('input[name="id"]').val('');
+    };
 
-        const showViewAll = () => toggleViews(false);
+    const populateForm = (actor) => {
+        $('input[name="id"]').val(actor.id);
+        $('input[name="name"]').val(actor.name);
+        $('select[name="gender"]').val(actor.gender);
+        $('input[name="dob"]').val(actor.dob);
+        $('select[name="country"]').val(actor.country);
+    };
 
-        const showUpdate = (button) => {
-            const row = $(button).closest('tr');
-            const actor = {
-                id: row.data('id'),
-                name: row.find('.actor-name').text(),
-                gender: row.find('.actor-gender').text(),
-                dob: row.find('.actor-dob').data('date'),
-                country: row.find('.actor-country').text()
-            };
+    const getFormData = () => ({
+        id: $('input[name="id"]').val(),
+        name: $('input[name="name"]').val(),
+        gender: $('select[name="gender"]').val(),
+        dob: $('input[name="dob"]').val(),
+        country: $('select[name="country"]').val()
+    });
 
-            populateForm(actor);
-            toggleViews(true, true);
-        };
-
-        const clearForm = () => {
-            $('#addUpdateForm')[0].reset();
-            $('input[name="id"]').val('');
-        };
-
-        const populateForm = (actor) => {
-            $('input[name="id"]').val(actor.id);
-            $('input[name="name"]').val(actor.name);
-            $('select[name="gender"]').val(actor.gender);
-            $('input[name="dob"]').val(actor.dob);
-
-            // Set country selection
-            const countrySelect = $('select[name="country"]');
-            countrySelect.val(actor.country);
-        };
-
-        const getFormData = () => ({
-            id: $('input[name="id"]').val(),
-            name: $('input[name="name"]').val(),
-            gender: $('select[name="gender"]').val(),
-            dob: $('input[name="dob"]').val(),
-            country: $('select[name="country"]').val()
+    // CRUD Operations
+    const loadActors = () => {
+        $.ajax({
+            url: '/actors',
+            method: 'GET',
+            success: (actors) => {
+                const tbody = $('#actorTable tbody').empty();
+                actors.forEach(actor => {
+                    tbody.append(`
+                        <tr data-id="${actor.id}">
+                            <td>${actor.id}</td>
+                            <td class="actor-name">${actor.name}</td>
+                            <td class="actor-gender">${actor.gender}</td>
+                            <td class="actor-dob" data-date="${actor.dob}">${formatDate(actor.dob)}</td>
+                            <td class="actor-country">${actor.country}</td>
+                            <td>
+                                <button class="btn btn-sm btn-primary mr-1" onclick="showUpdate(this)">Update</button>
+                                <button class="btn btn-sm btn-danger" onclick="deleteActor(${actor.id})">Delete</button>
+                            </td>
+                        </tr>
+                    `);
+                });
+            },
+            error: (xhr, status, error) => {
+                console.error("Error loading actors:", error);
+            }
         });
+    };
 
-        // AJAX Functions
-        const loadActors = () => {
-            $.ajax({
-                url: '/actors',
-                method: 'GET',
-                success: (actors) => {
-                    const tbody = $('#actorTable tbody').empty();
-                    actors.forEach(actor => {
-                        tbody.append(`
-                            <tr data-id="${actor.id}">
-                                <td>${actor.id}</td>
-                                <td class="actor-name">${actor.name}</td>
-                                <td class="actor-gender">${actor.gender}</td>
-                                <td class="actor-dob" data-date="${actor.dob}">${formatDate(actor.dob)}</td>
-                                <td class="actor-country">${actor.country}</td>
-                                <td>
-                                    <button class="btn btn-sm btn-primary mr-1" onclick="showUpdate(this)">Update</button>
-                                    <button class="btn btn-sm btn-danger" onclick="deleteActor(${actor.id}, this)">Delete</button>
-                                </td>
-                            </tr>
-                        `);
-                    });
-                },
-                error: (xhr, status, error) => {
-                    console.error("Error loading actors:", error);
-                }
-            });
-        };
-
-        const loadCountries = () => {
-            $.ajax({
-                url: '/countries',
-                method: 'GET',
-                success: (countries) => {
-                    const select = $('select[name="country"]').empty().append('<option value="">-- Select Country --</option>');
-                    countries.forEach(country => {
-                        select.append(`<option value="${country.name}">${country.name}</option>`);
-                    });
-                },
-                error: (xhr, status, error) => {
-                    console.error("Error loading countries:", error);
-                }
-            });
-        };
-
-        const addActor = () => {
-            const actor = getFormData();
-            $.ajax({
-                url: '/actors',
-                method: 'POST',
-                contentType: 'application/json',
-                data: JSON.stringify(actor),
-                success: (newActor) => {
-                    loadActors();
-                    showViewAll();
-                },
-                error: (xhr, status, error) => {
-                    console.error("Error adding actor:", error);
-                }
-            });
-        };
-
-        const updateActor = () => {
-            const actor = getFormData();
-            $.ajax({
-                url: `/actors/${actor.id}`,
-                method: 'PUT',
-                contentType: 'application/json',
-                data: JSON.stringify(actor),
-                success: () => {
-                    loadActors();
-                    showViewAll();
-                },
-                error: (xhr, status, error) => {
-                    console.error("Error updating actor:", error);
-                }
-            });
-        };
-
-        const deleteActor = (id, button) => {
-            if (!confirm("Are you sure you want to delete this actor?")) return;
-
-            $.ajax({
-                url: `/actors/${id}`,
-                method: 'DELETE',
-                success: () => {
-                    $(button).closest('tr').remove();
-                },
-                error: (xhr, status, error) => {
-                    console.error("Error deleting actor:", error);
-                }
-            });
-        };
-
-        // Initialize
-        $(document).ready(() => {
-            loadActors();
-            loadCountries();
+    const loadCountries = () => {
+        $.ajax({
+            url: '/countries',
+            method: 'GET',
+            success: (countries) => {
+                const select = $('select[name="country"]').empty().append('<option value="">-- Select Country --</option>');
+                countries.forEach(country => {
+                    select.append(`<option value="${country.name}">${country.name}</option>`);
+                });
+            },
+            error: (xhr, status, error) => {
+                console.error("Error loading countries:", error);
+            }
         });
-    </script>
-</body>
+    };
 
-</html>
+    const doAdd = () => {
+        const actor = getFormData();
+        $.ajax({
+            url: '/actors',
+            method: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify(actor),
+            success: () => {
+                loadActors();
+                showViewAll();
+            },
+            error: (xhr, status, error) => {
+                console.error("Error adding actor:", error);
+            }
+        });
+    };
+
+    const doUpdate = () => {
+        const actor = getFormData();
+        $.ajax({
+            url: `/actors/${actor.id}`,
+            method: 'PUT',
+            contentType: 'application/json',
+            data: JSON.stringify(actor),
+            success: () => {
+                loadActors();
+                showViewAll();
+            },
+            error: (xhr, status, error) => {
+                console.error("Error updating actor:", error);
+            }
+        });
+    };
+
+    const deleteActor = (id) => {
+        if (!confirm("Are you sure you want to delete this actor?")) return;
+
+        $.ajax({
+            url: `/actors/${id}`,
+            method: 'DELETE',
+            success: () => {
+                loadActors();
+            },
+            error: (xhr, status, error) => {
+                console.error("Error deleting actor:", error);
+            }
+        });
+    };
+
+    // Initialize
+    $(document).ready(() => {
+        loadActors();
+        loadCountries();
+    });
+</script>
