changing the Data of Birth th and label

--- a/actorviewer.html
+++ b/actorviewer.html
@@ -19,7 +19,10 @@
                     <th>ID</th>
                     <th>Name</th>
                     <th>Gender</th>
-                    <th>Date of Birth</th>
+                    <th>
+                        Date of Birth<br>
+                        <small class="text-muted">(DD/MM/YYYY)</small>
+                    </th>
                     <th>Country</th>
                     <th>Actions</th>
                 </tr>
@@ -50,7 +53,10 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="dob">Date of Birth</label>
+                    <label for="dob">
+                        Date of Birth<br>
+                        <small class="text-muted">(DD/MM/YYYY)</small>
+                    </label>
                     <input type="date" name="dob" class="form-control" required>
                 </div>
 
