Changing date format for data presented when clicking on the button details in the actor viewer.

--- a/actorviewer.html
+++ b/actorviewer.html
@@ -100,7 +100,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="modal fade" id="actorModal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -329,7 +329,7 @@
                 success: (actor) => {
                     const details = `
                         <p><strong>Name:</strong> ${actor.name}</p>
-                        <p><strong>Birth Date:</strong> ${actor.birthday || 'Unknown'}</p>
+                        <p><strong>Date of Birth <small class="text-muted">(DD/MM/YYYY)</small></strong>(${formatDate(actor.birthday) || 'Unknown'})</p>
                         <p><strong>Place of Birth:</strong> ${actor.place_of_birth || 'Unknown'}</p>
                         <p><strong>Biography:</strong><br>${actor.biography || 'No biography available'}</p>
                     `;
